# rockslide

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.sh  default.nix  quick-test.sh  upload.sh
.github/workflows/: ci.yml
etc/: dev.toml  rockslide.service  rockslide.toml  setup.sh
src/: config.rs  container_orchestrator.rs  main.rs  podman.rs  postgres.rs  registry.rs  reverse_proxy.rs
src/registry/: auth.rs  hooks.rs  storage.rs  types.rs  www_authenticate.rs
