[package]
name = "rockslide"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = { version = "0.7.1", features = [ "tracing" ] }
base64 = "0.21.5"
futures = "0.3.29"
hex = "0.4.3"
nom = "7.1.3"
sec = "1.0.0"
serde = { version = "1.0.193", features = [ "derive" ] }
serde_json = "1.0.108"
sha2 = "0.10.8"
thiserror = "1.0.50"
tokio = { version = "1.34.0", features = [ "rt-multi-thread", "macros", "fs" ] }
tokio-util = { version = "0.7.10", features = ["io"] }
tower-http = { version = "0.5.0", features = [ "trace" ] }
tracing-subscriber = { version = "0.3.18", features = [ "env-filter" ] }
uuid = { version = "1.6.1", features = [ "v4", "serde" ] }

[dev-dependencies]
tempdir = "0.3.7"
tower = "0.4.13"
