[package]
name = "rockslide"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = { version = "0.7.1", features = [ "tracing" ] }
base64 = "0.21.5"
constant_time_eq = "0.3.0"
futures = "0.3.29"
gethostname = "0.4.3"
hex = "0.4.3"
nom = "7.1.3"
reqwest = { version = "0.11.23", default-features = false }
sec = { version = "1.0.0", features = [ "deserialize", "serialize" ] }
serde = { version = "1.0.193", features = [ "derive" ] }
serde_json = "1.0.108"
sha2 = "0.10.8"
tempfile = "3.9.0"
thiserror = "1.0.50"
tokio = { version = "1.34.0", features = [ "rt-multi-thread", "macros", "fs", "process" ] }
tokio-util = { version = "0.7.10", features = [ "io" ] }
toml = "0.8.8"
tower-http = { version = "0.5.0", features = [ "trace" ] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [ "env-filter" ] }
uuid = { version = "1.6.1", features = [ "v4", "serde" ] }

[dev-dependencies]
http-body-util = "0.1.0"
tempdir = "0.3.7"
tower = "0.4.13"

[profile.release]
opt-level = "s"
strip = "symbols"
lto = "fat"
